fix breadcrumb toolbar position on small devices

--- a/ckanext/ozwillo_theme/fanstatic/ozwillo.css
+++ b/ckanext/ozwillo_theme/fanstatic/ozwillo.css
@@ -55,6 +55,12 @@ padding-top: 80px;
   content: none;
 }
 
+@media (max-width: 767px) {
+  .toolbar {
+    padding-left: 20px;
+  }
+}
+
 #t3-mainnav .nav>li>.dropdown-menu:before,
 #t3-mainnav .nav>li>.dropdown-menu:after {
   display: none;
